@@ -1,3 +1,8 @@
+2005-02-17  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b10
+
+	* Change: Add extra session security by preventing session fixation
+	  attacks.  Session IDs are changed on login and logout.
+
 2005-02-17  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b9
 
 	* Fix: stats.php was outputting an HTML comment before loading the embedded
